Improve HTML page layout, front-page and publications list.

--- a/doc/_layouts/default.html
+++ b/doc/_layouts/default.html
@@ -1,79 +1,77 @@
 <html>
 <head>
+<title>{{ page.title }}</title>
 <style>
 html {
-font-family: sans-serif;
+ font-family: sans-serif;
 }
 
 #nav 
 {
-padding:5px 10px;
-background:#fff;
+ padding:5px 10px;
+ text-align: center;
 }
 
 #main {
--float:right;
--max-width:700px;
-padding:10px;
-background:#fff;
+ padding:10px;
 }
 
 h2 {
-margin:0 0 1em;
+ margin:0 0 1em;
 }
 
 
 #wrap 
 {
-max-width:1000px;
-margin:0 auto;
-background:#fff;
+ max-width:1000px;
+ margin:0 auto;
 }
 
 #footer {
-clear: both;
-padding: 5px 10px;
-background: #fff;
-text-align: center;
-font-size: 50%;
+ clear: both;
+ padding: 5px 10px;
+ text-align: center;
+ font-size: 50%;
 }
 
 #header {
-text-align: center;
-font-size: 190%;
-font-weight: bold;
+ text-align: center;
+ font-size: 190%;
+ font-weight: bold;
 }
 
 
 #sidebar {
-float:right;
-width:230px;
-padding:0 20px;
-margin:0 20px 20px;
-background:#f8f8f8;
-border:thin solid #eee;
-text-size: 80%;
+ float:right;
+ width:230px;
+ padding:0 20px;
+ margin:0 20px 20px;
+ background:#f8f8f8;
+ border:thin solid #eee;
+ text-size: 80%;
 }
 
 #sidebar ul {margin-left: 0; padding-left: 0;}
 #sidebar ul li {margin-left: 1.2em; padding-left: 0;}
 
 #footer p {
-margin:0;
+ margin:0;
 }
 
 pre {
-overflow: auto;
+ overflow: auto;
 }
 
 </style>
 </head>
 <body>
 <div id="wrap">
-  <div id="header">
-    IgProf, The Ignominous Profiler
-  </div>
+  <h1 id="header">{{ page.title }}</h1>
   <div id="nav">
+    {% for r in page.related %}
+     <a href="{{ r.link }}">{{ r.name }}</a>
+     {% if forloop.last == false %} | {% endif %}
+    {% endfor %}
   </div>
   <div id="sidebar">
     <h3 id='quick_start'>Quick start</h3>
@@ -108,10 +106,7 @@ overflow: auto;
 
   </div>
   <div id="main">
-    <h2>{{page.title}}</h2>
-
     {{content}}
-
   </div>
   <div id="footer">
   Copyright 2002-2010 Giulio Eulisse &amp; Lassi Tuura
