Move presentations to another page, simplify side bar.

--- a/doc/_layouts/default.html
+++ b/doc/_layouts/default.html
@@ -76,41 +76,26 @@ pre {
   <div id="sidebar">
     <h3 id='quick_start'>Quick start</h3>
     <ul>
-    <li><a href='index.html'>Introduction</a></li>
-    <li><a href='CMSSW.html'>IgProf in CMSSW</a></li>
-    <li><a href='running.html'>Running igprof</a></li>
-    <li><a href='analysis.html'>Analysing results</a></li>
+      <li><a href='index.html'>Introduction</a></li>
+      <li><a href='CMSSW.html'>IgProf in CMSSW</a></li>
+      <li><a href='running.html'>Running igprof</a></li>
+      <li><a href='analysis.html'>Analysing results</a></li>
     </ul>
 
-    <h3 id='details'>Details</h3>
+    <h3 id='details'>Details and more</h3>
     <ul>
-    <li>
-    <a href='text-output-format.html'>Full details on analysis output</a>
-    </li>
-
-    <li>
-    <p>How IgProf works</p>
-    <ul>
-    <li><a href='dump-format.html'>Profile output file format</a></li>
-    <li><a href='ighook.html'>The IgHook tapping library</a></li>
+      <li><a href='text-output-format.html'>Full details on analysis output</a></li>
+      <li><a href='dump-format.html'>Profile output file format</a></li>
+      <li><a href='ighook.html'>The IgHook tapping library</a></li>
+      <li><a href='documents.html'>Papers and documents</a></li>
+      <li><a href='authors.html'>Authors</a></li>
+      <li><a href='history.html'>History</a></li>
     </ul>
-    </li>
-
-    <li>
-    <p><a href='authors.html'>Authors</a></p>
-    </li>
-    <li>
-    <p><a href='history.html'>History</a></p>
-    </li>
-    </ul>
-
   </div>
   <div id="main">
-    {{content}}
+    {{ content }}
   </div>
-  <div id="footer">
-  Copyright 2002-2010 Giulio Eulisse &amp; Lassi Tuura
-  </div>
+  <div id="footer">Copyright 2002-2010 Giulio Eulisse &amp; Lassi Tuura</div>
 </div>
 </body>
 </html>
