Documentation update from Pete Elmer: installation, some clean-up.

--- a/doc/_layouts/default.html
+++ b/doc/_layouts/default.html
@@ -77,7 +77,7 @@ pre {
     <h3 id='quick_start'>Quick start</h3>
     <ul>
       <li><a href='index.html'>Introduction</a></li>
-      <li><a href='install.html'>Installing IgProf</a></li>
+      <li><a href='install.html'>Building and Installing IgProf</a></li>
       <li><a href='running.html'>Running igprof</a></li>
       <li><a href='analysis.html'>Producing profile reports</a></li>
     </ul>
