--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,18 +84,21 @@ pre {
 
     <h3 id='details'>Details and more</h3>
     <ul>
+      <li><a href='html-output-format.html'>HTML profile reports</a></li>
       <li><a href='text-output-format.html'>ASCII profile reports</a></li>
       <li><a href='dump-format.html'>Profile statistics output file format</a></li>
       <li><a href='ighook.html'>The IgHook tapping library</a></li>
       <li><a href='documents.html'>Papers and documents</a></li>
       <li><a href='authors.html'>Authors</a></li>
+      <li><a href='users.html'>Famous users</a></li>
       <li><a href='history.html'>History</a></li>
+      <li><a href='license.txt'>License</a></li>
     </ul>
   </div>
   <div id="main">
     {{ content }}
   </div>
-  <div id="footer">Copyright 2002-2012 Giulio Eulisse &amp; Lassi Tuura</div>
+  <div id="footer">Copyright 2002-2013 Giulio Eulisse &amp; Lassi Tuura</div>
 </div>
 </body>
 </html>
