--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,6 +80,8 @@ pre {
       <li><a href='install.html'>Building and Installing IgProf</a></li>
       <li><a href='running.html'>Running igprof</a></li>
       <li><a href='analysis.html'>Producing profile reports</a></li>
+      <li><a href='advancedoptions.html'>Advanced options</a></li>
+      <li><a href='releasenotes.html'>Release notes</a></li>
     </ul>
 
     <h3 id='details'>Details and more</h3>
