--- a/doc/_layouts/default.html
+++ b/doc/_layouts/default.html
@@ -80,22 +80,27 @@ pre {
       <li><a href='install.html'>Building and Installing IgProf</a></li>
       <li><a href='running.html'>Running igprof</a></li>
       <li><a href='analysis.html'>Producing profile reports</a></li>
+      <li><a href='advancedoptions.html'>Advanced options</a></li>
+      <li><a href='releasenotes.html'>Release notes</a></li>
     </ul>
 
     <h3 id='details'>Details and more</h3>
     <ul>
+      <li><a href='html-output-format.html'>HTML profile reports</a></li>
       <li><a href='text-output-format.html'>ASCII profile reports</a></li>
       <li><a href='dump-format.html'>Profile statistics output file format</a></li>
       <li><a href='ighook.html'>The IgHook tapping library</a></li>
       <li><a href='documents.html'>Papers and documents</a></li>
       <li><a href='authors.html'>Authors</a></li>
+      <li><a href='users.html'>Famous users</a></li>
       <li><a href='history.html'>History</a></li>
+      <li><a href='license.txt'>License</a></li>
     </ul>
   </div>
   <div id="main">
     {{ content }}
   </div>
-  <div id="footer">Copyright 2002-2010 Giulio Eulisse &amp; Lassi Tuura</div>
+  <div id="footer">Copyright 2002-2013 Giulio Eulisse &amp; Lassi Tuura</div>
 </div>
 </body>
 </html>
