--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -110,7 +110,7 @@ pre {
   <div id="main">
     {{ content }}
   </div>
-  <div id="footer">Copyright 2002-2013 Giulio Eulisse &amp; Lassi Tuura</div>
+  <div id="footer">Copyright 2002-{{ 'now' | date: "%Y" }} Giulio Eulisse &amp; Lassi Tuura</div>
 </div>
 </body>
 </html>
